# shrew

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/shrew/: __init__.pyi  __main__.py  core.py
test/: __init__.py  enroll2.txt  test_core.py
