[metadata]
# replace with your username:
name = shrew
version = 1.0.1
author = Chris Walther Andersen
author_email = cvvand@gmail.com
description = Template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwand/shrew
project_urls =
	Bug Tracker = https://github.com/cwand/shrew/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = shrew
install_requires =
	numpy>=1.23
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest>=7.1
	pytest-cov>=3.0
	mypy>=0.971
	flake8>=5.0
	tox>=3.25

[options.package_data]
shrew = py.typed

[flake8]
max-line-length = 100
ignore = W191,E128
